[package]
name = "lucerna"
version = "2.6.2"
authors = ["Kyando_2 <amehikoji@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies.structures]
git = "https://github.com/Lucerna-Lang/Structures"

[dependencies.liber]
git = "https://github.com/Lucerna-Lang/Liber"

[dependencies.web]
git = "https://github.com/Lucerna-Lang/Web"

[build-dependencies]
winres = "0.1"